// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`as\` prop composite base - string as 1`] = `
.emotion-0 {
  color: green;
}

<article>
  <h1
    className="emotion-0 emotion-1"
  >
    My Title
  </h1>
  <h3
    className="emotion-0 emotion-1"
  >
    My Subtitle
  </h3>
</article>
`;

exports[`\`as\` prop forward as - composite base 1`] = `
.emotion-0 {
  color: green;
}

<article>
  <h1
    className="emotion-0 emotion-1"
  >
    My Title
  </h1>
  <h1
    as="h2"
    className="emotion-0 emotion-1"
  >
    My Subtitle
  </h1>
</article>
`;

exports[`\`as\` prop forward as - string base 1`] = `
.emotion-0 {
  color: green;
}

<article>
  <h1
    className="emotion-0 emotion-1"
  >
    My Title
  </h1>
  <h1
    as="h2"
    className="emotion-0 emotion-1"
  >
    My Subtitle
  </h1>
</article>
`;

exports[`\`as\` prop string base - string as 1`] = `
.emotion-0 {
  color: green;
}

<article>
  <h1
    className="emotion-0 emotion-1"
  >
    My Title
  </h1>
  <h2
    className="emotion-0 emotion-1"
  >
    My Subtitle
  </h2>
</article>
`;

exports[`\`as\` prop styled string base - string as 1`] = `
.emotion-0 {
  color: green;
}

.emotion-2 {
  color: green;
  font-weight: 100;
}

<article>
  <h1
    className="emotion-0 emotion-1"
  >
    My Title
  </h1>
  <h1
    className="emotion-2 emotion-3"
  >
    My Subtitle
  </h1>
  <h3
    className="emotion-2 emotion-3"
  >
    My smaller Subtitle
  </h3>
</article>
`;
